--- a/src/assets/scss/theme.scss
+++ b/src/assets/scss/theme.scss
@@ -8,6 +8,8 @@
   --text-light-gray: #6b818c;
   --color-light-translucid: #edf2f480;
 
+  --default-border-radius: 15px;
+
   .p-button {
     color: var(--text-light);
     &:focus {
