--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,15 +3,17 @@
 @import "assets/scss/fonts.scss";
 @import "assets/scss/theme.scss";
 
+html, body {
+  height:100%;
+}
+
 html {
-  height: 100vh;
-  width: 100vw;
   font-size: 20px;
 }
 
 body {
-  height: 100%;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
   font-family: 'Roboto', sans-serif;
   color: var(--text-light);
 }
